# docompr

./: CMakeLists.txt  main.cpp
client/: CMakeLists.txt
client/src/: main.cpp
client/test/: main.cpp
libs/: CMakeLists.txt
libs/gzstream/: Makefile  gzstream.h
proto/: CMakeLists.txt
proto/protos/: file.proto
server/: CMakeLists.txt
server/src/: CMakeLists.txt  Compressor.cpp  Compressor.hpp  CompressorImpl.cpp  CompressorImpl.hpp  main.cpp
server/src/compress/: compressor.cpp  compressor.hpp  compressorPool.hpp
server/src/compressor/: CMakeLists.txt  compressor.cpp  compressor.hpp  io.hpp
server/src/compressor/pool/: baseComrpessorPool.hpp  compressorPool.cpp  compressorPool.hpp
server/src/observer/: observer.cpp  observer.hpp
server/src/processor/: QueueProcessor.hpp
server/src/queue/: RequestQueue.cpp  RequestQueue.hpp
server/src/writer/: writer.cpp  writer.hpp
